--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "lib-flexible": "^0.3.2",
+    "vant": "^3.4.4",
+    "vite-plugin-style-import": "^2.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
