--- a/package.json
+++ b/package.json
@@ -5,14 +5,30 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "serve-vite": "vite",
+    "build-vite": "vite build",
+    "preview-vite": "vite preview"
   },
   "dependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.1",
+    "@types/lodash-es": "^4.17.6",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.2",
+    "axios": "^0.25.0",
     "babel-plugin-import": "^1.13.3",
+    "consola": "^2.15.3",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
-    "vant": "^3.4.4",
-    "vite-plugin-style-import": "^2.0.0",
+    "lodash-es": "^4.17.21",
+    "postcss-px-to-viewport-rxdey": "^0.0.9",
+    "qs": "^6.10.3",
+    "vant": "3.2.4",
+    "vite": "^2.7.2",
+    "vite-plugin-env-compatible": "^1.1.1",
+    "vite-plugin-html": "2.1.1",
+    "vite-plugin-style-import": "1.2.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -26,7 +42,7 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.26",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
