--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview-vite": "vite preview"
   },
   "dependencies": {
+    "@ckpack/vue-color": "^1.1.5",
     "@originjs/vite-plugin-commonjs": "^1.0.1",
     "@types/lodash-es": "^4.17.6",
     "@vitejs/plugin-vue": "^2.0.1",
