--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.12",
     "lib-flexible": "^0.3.2",
+    "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "postcss-px-to-viewport-rxdey": "^0.0.9",
     "qs": "^6.10.3",
