--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ckpack/vue-color": "^1.1.5",
     "@originjs/vite-plugin-commonjs": "^1.0.1",
     "@types/lodash-es": "^4.17.6",
+    "@vant/touch-emulator": "^1.3.2",
     "@vitejs/plugin-vue": "^2.0.1",
     "@vitejs/plugin-vue-jsx": "^1.3.2",
     "axios": "^0.25.0",
