--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev": "vite",
+    "dev": "vite --host",
     "serve-vite": "vite",
     "build-vite": "vite build",
     "preview-vite": "vite preview"
