--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ckpack/vue-color": "^1.1.5",
+    "@nanogiants/vue3-longpress": "^1.0.8",
     "@originjs/vite-plugin-commonjs": "^1.0.1",
     "@types/lodash-es": "^4.17.6",
     "@vant/touch-emulator": "^1.3.2",
